# dioprocess

./: .gitignore  CLAUDE.md  Cargo.toml  KERNEL_TODO.md  LICENSE  PSPCIDTABLE_IMPROVEMENTS.md  README.md  copilot-instructions.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
assets/example_stress_test/: example_stress_test.sln  example_stress_test.vcxproj  main.cpp
assets/unhook_test/: Cargo.toml  README.md
assets/unhook_test/hook_dll/: Cargo.toml
assets/unhook_test/hook_dll/src/: lib.rs
assets/unhook_test/test_exe/: Cargo.toml
assets/unhook_test/test_exe/src/: main.rs  manual_test.rs
crates/callback/: Cargo.toml
crates/callback/src/: driver.rs  error.rs  lib.rs  pspcidtable.rs  storage.rs  types.rs
crates/dioprocess/: Cargo.toml  app.manifest  build.rs  resources.rc
crates/dioprocess/src/: main.rs  ui.rs
crates/misc/: Cargo.toml
crates/misc/src/: error.rs  hook_scanner.rs  kernel_inject.rs  lib.rs  memory.rs  module.rs  token.rs  unhook.rs
crates/misc/src/injection/: apc_queue.rs  earlybird.rs  function_stomping.rs  loadlibrary.rs  manual_map.rs  mod.rs  remote_mapping.rs  thread_hijack.rs
crates/misc/src/process/: create.rs  ghost.rs  ghostly_hollow.rs  herpaderp.rs  herpaderp_hollow.rs  hollow.rs  mod.rs  ppid_spoof.rs
crates/misc/src/shellcode_inject/: classic.rs  mod.rs  threadless.rs  web_staging.rs
crates/process/: Cargo.toml
crates/process/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: config.rs  lib.rs  routes.rs  state.rs  styles.rs
crates/ui/src/components/: app.rs  callback_tab.rs  create_process_window.rs  function_stomping_window.rs  ghost_process_window.rs  graph_window.rs  hook_scan_window.rs  kernel_utilities_tab.rs  memory_window.rs  mod.rs  network_tab.rs  process_row.rs  process_tab.rs  service_tab.rs  shellcode_inject_window.rs  string_scan_window.rs  threadless_inject_window.rs  token_thief_window.rs  utilities_tab.rs
crates/ui/src/components/kernel_enumeration/: callback_enum.rs  drivers.rs  minifilters.rs  mod.rs  pspcidtable.rs
kernelmode/DioProcess/: DioProcess.sln  build_debug_x64.bat
kernelmode/DioProcess/DioProcessCli/: DioProcessCli.vcxproj  main.cpp
kernelmode/DioProcess/DioProcessDriver/: DioProcessCommon.h  DioProcessDriver.cpp  DioProcessDriver.h  Locker.h  (+4 more)
kernelmode/ProcessMonitorEx/: README.md
src/: main.rs  process.rs  ui.rs
tools/: verify_offsets.md
(+19 files in other folders)
