[package]
name = "ui"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"] }
tokio = { version = "1", features = ["time"] }
process = { path = "../process" }
network = { path = "../network" }
service = { path = "../service" }
misc = { path = "../misc" }
callback = { path = "../callback" }
arboard = "3"
rfd = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
parking_lot = "0.12"
ureq = "2"
zip = "2"
